working game board

--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic Tac Toe</title>
+    <link rel="stylesheet" href="style.css">
     <script src="game.js" defer></script>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="game-button">
+            <button type="button" id="newGame">New Game</button>
+            <button type="button" id="reset">Reset Board</button>
+        </div>
+        <div id="game-board"></div>
+        <span id="announce"></span>
+    </div>
 </body>
 </html>
