basic working game

--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
     <script src="game.js" defer></script>
 </head>
 <body>
+    <div class="title-card">
+        <span class="title">Tic Tac Toe</span>
+    </div>
     <div class="container">
         <div class="game-button">
-            <button type="button" id="newGame">New Game</button>
-            <button type="button" id="reset">Reset Board</button>
+            <span id="announce"></span>
+            <button type="button" id="reset">Reset Score</button>
         </div>
         <div id="game-board"></div>
-        <span id="announce"></span>
     </div>
 </body>
 </html>
