working scoreboard, score reset, turn announcer

--- a/index.html
+++ b/index.html
@@ -12,11 +12,21 @@
         <span class="title">Tic Tac Toe</span>
     </div>
     <div class="container">
-        <div class="game-button">
+        <div class="top-bar">
             <span id="announce"></span>
             <button type="button" id="reset">Reset Score</button>
         </div>
         <div id="game-board"></div>
+        <div class="scores">
+            <div class="x-score">
+                <div class="score-label">Player X</div>
+                <div class="score" id="x-score">0</div>
+            </div>
+            <div class="y-score">
+                <div class="score-label">Player Y</div>
+                <div class="score" id="y-score">0</div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
